# maiter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FAQ  Makefile  README
Maiter/: .cproject  .project  Maiter.cpp  Makefile  README
Maiter/conf/: maiter-cluster  mpi-cluster
Maiter/src/: CMakeLists.txt
Maiter/src/examples/: CMakeLists.txt  adsorption.cc  adsorption2.cc  adsorption3.cc  gengraph.cc  katz.cc  katz2.cc  katz3.cc  main.cc  maiterkernel.h  pagerank.cc  pagerank2.cc  pagerank3.cc  shortest-path2.cc  shortest-path3.cc  shortestpath.cc  simrank.cc
Maiter/src/kernel/: deltatable.h  global-table.cc  global-table.h  kernel.h  local-table.h  statetable.h  table-registry.h  table.h
Maiter/src/master/: master.cc  master.h
Maiter/src/util/: common.cc  rpc.cc
Maiter/src/worker/: worker.cc  worker.h
benchmark/: common.cpp  common.h  concomp.cpp  makefile  markovchain.cpp  pagerank.cpp  sssp.cpp  sswp.cpp
conf/: maiter-cluster
run-script/: cal_delta_gen_ratio.sh  contains.sh  do_local_aggregation.sh  go-delta.sh  go-kernel-net.sh  go-kernel.sh  go-pr.sh  go-sp-delta.sh  go-sp-origin.sh  go-sp.sh  go-wp.sh  make-maiter-folder.sh  run-test-sp.sh  test-cc-basic.sh  test-kernel-cr.sh  test-kernel-ncr.sh  test-kernel-uw.sh  test-mst-basic.sh  test-pr-basic.sh  test-pr-priority.sh  test-pr-top.sh  test-sp-alpha.sh  test-sp-good.sh  test-sp-kernel.sh  test-sp-kernel2.sh  test-sp-priority.sh  test-sp-scale-worker.sh  test-sp-top.sh  test-wp-basic.sh  test-wp-top.sh
src/: CMakeLists.txt
src/client/: client.h
src/dbg/: CMakeLists.txt  dbg.h  getcallstack.cpp  getcallstack.h  stream_cont.hpp
src/driver/: CMakeLists.txt  Dispatcher.hpp  MsgDriver.cc  MsgDriver.h
src/driver/tools/: ReplyHandler.cc  ReplyHandler.h  SyncUnit.h
src/examples/: CMakeLists.txt  adsorption.cc  con_component.cc  examples.cc  examples.h  gengraph.cc  jacobi.cc  katz.cc  main.cc  markovchain.cc  markovchain.cpp  minspantree.cc  pagerank.cc  shortestpath.cc  sim.cc  simrank.cc  widestpath.cc
src/kernel/: CMakeLists.txt  DSMKernel.cc  DSMKernel.h  deltatable.h  global-table.cc  global-table.h  kernel.cc  kernel.h  local-table.cc  local-table.h  maiter-kernel.h  sharder_impl.hpp  statetable.h  table-registry.cc  table-registry.h  table.h  table_descriptor.h  table_iterator.h  term_checker.h  term_checker_impl.hpp  trigger.h  typed-global-table.hpp
src/kernel/kernel/: DSMKernel.cc  DSMKernel.h  IterateKernel.h
src/main/: CMakeLists.txt  main.cc
src/master/: CMakeLists.txt  SyncUnit.h  master.cc  master.h  master2.cc  master_checkpoint.cc  master_handler.cc  master_tf.hpp  run-descriptor.cc  run-descriptor.h  worker-handle.cc  worker-handle.h
src/msg/: CMakeLists.txt  common.proto  message.proto  mtype.proto
src/net/: CMakeLists.txt  NetworkImplMPI.cc  NetworkImplMPI.h  NetworkThread.cc  NetworkThread.h  NetworkThread2.cc  NetworkThread2.h  RPCInfo.h  Task.cc  Task.h
src/table/: CMakeLists.txt  TableDescriptor.cc  TableDescriptor.h  TableHelper.h  deltatable.h  global-table.cc  global-table.h  local-table.cc  local-table.h  statetable.h  table-coder.cc  table-coder.h  table-create.h  table-interfaces.h  table-registry.cc  table-registry.h  table.h  table_descriptor.h  table_iterator.h  typed-global-table.hpp
src/table/tbl_widget/: IterateKernel.h  sharder.h  sharder_impl.hpp  term_checker.h  term_checker_impl.hpp
src/util/: CMakeLists.txt  common.cc  common.h  file.cc  file.h  marshal.hpp  marshalled_map.hpp  noncopyable.h  rpc.cc  rpc.h  stringpiece.cc  stringpiece.h  timer.cc  timer.h  tuple.h
src/worker/: CMakeLists.txt  worker.cc  worker.h  worker_checkpoint.cc  worker_handler.cc
support-script/: TimeExtract.java  compare-ilist.py  compare-result-pr.py  compare-result-sp.py  compare-result.py  count-cp-msg.py  count_cp_msg.py  cp_info_summarize.py  distribute-mpi-files.py  draw_cp.py  get_log_statistics.py  graph-converter.py  merge-bandwidth-usage-helper.sh  merge-bandwidth-usage.py  merge-delta-graph.py  pick-cp-count.sh  pick-cp-info.py  pick-time.sh  repartition-delta-graph.py  repartition-kv-data.py  shortest-path.py  split_delta.py
